Bug 169914 - Black background of the report builder : charts are not visible (Windows)
Summary: Black background of the report builder : charts are not visible (Windows)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Skia Windows-Dark-Mode Dark-Mode
  Show dependency treegraph
 
Reported: 2025-12-09 16:02 UTC by steve.contrib@gmail.com
Modified: 2026-01-26 19:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
working version 25.8.3.2 (X86_64) (39.78 KB, image/png)
2025-12-09 16:03 UTC, steve.contrib@gmail.com
Details
Bad versions 26.2.0.0.alpha1 + 26.2.0.0.beta1 (37.22 KB, image/png)
2025-12-09 16:04 UTC, steve.contrib@gmail.com
Details
test file (14.71 KB, application/vnd.sun.xml.base)
2025-12-09 16:05 UTC, steve.contrib@gmail.com
Details
the report from attachment 204533 ODB on Win11 in Dark color scheme and LO Appearance to Automatic (145.24 KB, image/png)
2025-12-09 17:05 UTC, V Stuart Foote
Details
same ODB report but with Win11 in Dark color scheme, but LO Appearance theme Dark Gray applied (145.03 KB, image/png)
2025-12-09 17:11 UTC, V Stuart Foote
Details
test steve - win10-x64 LO2.6.2 reset profile (6.17 MB, video/mp4)
2025-12-11 16:45 UTC, steve.contrib@gmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve.contrib@gmail.com 2025-12-09 16:02:24 UTC
Description:
With the LBO release Version: 25.8.3.2 (X86_64) on my windows, when I open a base .odb to modify a Report that contains a chart, I can clearly see the chart in dark mode. But after testing in 26.2.0.0.alpha1 (X86_64) and 26.2.0.0.beta1 (X86_64) the chart is now barely visible (see printscreens)


Steps to Reproduce:
1. Open a base .odb file (in my example, chartType.odb)
2. in 'Reports', right click -> 'Edit' on the report (in my example 'ClientsCafes_Rpt')
3. The Report is in editing mode and you can clearly see the chart (grey background, blue columns) with the 25.8.3.2 (X86_64) version but not with 26.2.0.0.alpha1 (X86_64) or 26.2.0.0.beta1 (X86_64) versions

Actual Results:
too much darkness, chart barely visible

Expected Results:
a little more light to see the chart


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Working version :

Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: fr-CH (en_CH); UI: en-US
Calc: CL threaded


And not working versions :

Version: 26.2.0.0.alpha1 (X86_64)
Build ID: 620(Build:0)
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_CH); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.beta1 (X86_64)
Build ID: 620(Build:0)
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_CH); UI: en-US
Calc: CL threaded
Comment 1 steve.contrib@gmail.com 2025-12-09 16:03:41 UTC
Created attachment 204531 [details]
working version 25.8.3.2 (X86_64)
Comment 2 steve.contrib@gmail.com 2025-12-09 16:04:21 UTC
Created attachment 204532 [details]
Bad versions 26.2.0.0.alpha1 + 26.2.0.0.beta1
Comment 3 steve.contrib@gmail.com 2025-12-09 16:05:02 UTC
Created attachment 204533 [details]
test file
Comment 4 V Stuart Foote 2025-12-09 17:05:44 UTC
Created attachment 204535 [details]
the report from attachment  204533 [details] ODB on Win11 in Dark color scheme and LO Appearance to Automatic

Can not confirm. Attachment shows the report of the ODB open in Win11 with 26.8.0 master from 2025-12-07. os/DE in Dark color scheme, Tools -> Options -> Appearance set to default 'Automatic'

=-testing-=

Version: 26.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 680(Build:0)
CPU threads: 28; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 5 V Stuart Foote 2025-12-09 17:11:19 UTC
Created attachment 204537 [details]
same ODB report but with Win11 in Dark color scheme, but LO Appearance theme Dark Gray applied

And the reports are fine with also with an Appearance theme enabled.

Perhaps try in 26.2 with a clean or safemode user profile?
Comment 6 steve.contrib@gmail.com 2025-12-10 19:10:25 UTC
Hallo V Stuart Foote,

The problem does occur with the report builder not with the generated report from the report builder (.odt). I just realized that I didn't use the correct technical term, my apologies.

Steps to Reproduce with my odb file :
- Open the charType.odb
- Click on the menu 'Reports'
- Right-click on 'ClientsCafes_Rpt'
- Click on 'Edit' from the contextual menu

>Perhaps try in 26.2 with a clean or safemode user profile?

already did previously


Thanks
steve
Comment 7 steve.contrib@gmail.com 2025-12-10 19:20:34 UTC
Test with 'dark mode' and with 'light mode' :
- issue with the 'dark mode'
- same issue with the 'light mode' + background remains black
Comment 8 steve.contrib@gmail.com 2025-12-10 19:45:49 UTC
Bug 169723 could be related.
Comment 9 steve.contrib@gmail.com 2025-12-11 16:45:19 UTC
Created attachment 204585 [details]
test steve - win10-x64 LO2.6.2 reset profile
Comment 10 steve.contrib@gmail.com 2025-12-11 17:29:54 UTC
Anyone can do following my steps? (video added)

Your tests Stuart is not valid
Comment 11 V Stuart Foote 2025-12-11 19:05:07 UTC
Confirmed.

Attempts to 'Edit' the report while in os/DE Dark color scheme result in dark on dark. With default Automatic, and no appearance themes disabled. Or with appearance themes enabled, and an appropriate dark appearance theme selected active.

Attempt to add a new chart are dark-on-dark, though if the chart is then selected it is rendered visible.

Not clear if this is Windows WDM/Explorer Dark color scheme only.

@Ilmari, could you check as well, thnx.

=-testing-=

Version: 26.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 680(Build:0)
CPU threads: 28; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 12 Buovjaga 2025-12-11 20:28:22 UTC
Not seen on Linux.

Bibisected with win64-26.2 to 9791aaaa31749857e719ab8b6926b180966f959b
tdf#167643 Selection is black
Comment 13 Commit Notification 2026-01-10 11:15:38 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/06ec063412cd6de022dd70743ef06558446d57ab

tdf#169914 dark mode + editing report + Windows + chart is broken

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2026-01-10 19:47:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/8b2cd69b82e8561de80d76a6edac8755c870e4ac

tdf#169914 dark mode + editing report + Windows + chart is broken

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.