tdf#169914 dark mode + editing report + Windows + chart is broken

regression from
  commit 9791aaaa31749857e719ab8b6926b180966f959b
  Author: Noel Grandin <noelgrandin@gmail.com>
  Date:   Tue Aug 5 14:40:41 2025 +0200
  tdf#167643 Selection is black

What is weird here is that this is what I first tried when fixing
tdf#167643, and it did not work.

But now this change does work, and tdf#167643 does not recur.
Huh.

It still looks terrible, but at least it is visible now.

The report designer will likely need further work to support
dark mode properly, and likely chart rendering too.

Change-Id: I6b7ed5d073a73377edcb772ef016cdb53294eb9e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196827
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>