vcl/inc/skia/gdiimpl.hxx
@@ -293,11 +293,11 @@ protected:
     // Create SkPaint to use when drawing to the surface. It is not to be used
     // when doing internal drawing such as when merging two bitmaps together.
     // This may apply some default settings to the paint as necessary.
-    SkPaint makePaintInternal(bool bSrcATop = false) const;
+    SkPaint makePaintInternal(bool bSrcOver = false) const;
     // Create SkPaint set up for drawing lines (using mLineColor etc.).
     SkPaint makeLinePaint(double transparency = 0) const;
     // Create SkPaint set up for filling (using mFillColor etc.).
-    SkPaint makeFillPaint(double transparency = 0, bool bSrcATop = false) const;
+    SkPaint makeFillPaint(double transparency = 0, bool bSrcOver = false) const;
     // Create SkPaint set up for bitmap drawing.
     SkPaint makeBitmapPaint() const;
     // Create SkPaint set up for gradient drawing.
@@ -358,7 +358,7 @@ protected:
     bool mInWindowBackingPropertiesChanged;
 };
 
-inline SkPaint SkiaSalGraphicsImpl::makePaintInternal(bool bSrcATop) const
+inline SkPaint SkiaSalGraphicsImpl::makePaintInternal(bool bSrcOver) const
 {
     SkPaint paint;
     // Invert could be done using a blend mode like invert() does, but
@@ -369,8 +369,8 @@ inline SkPaint SkiaSalGraphicsImpl::makePaintInternal(bool bSrcATop) const
         SkiaHelper::setBlenderInvert(&paint);
     else if (mXorMode == XorMode::Xor)
         SkiaHelper::setBlenderXor(&paint);
-    else if (bSrcATop)
-        paint.setBlendMode(SkBlendMode::kSrcATop);
+    else if (bSrcOver)
+        paint.setBlendMode(SkBlendMode::kSrcOver);
     else
         paint.setBlendMode(SkBlendMode::kSrc); // set as is, including alpha
     return paint;
@@ -387,10 +387,10 @@ inline SkPaint SkiaSalGraphicsImpl::makeLinePaint(double transparency) const
     return paint;
 }
 
-inline SkPaint SkiaSalGraphicsImpl::makeFillPaint(double transparency, bool bSrcATop) const
+inline SkPaint SkiaSalGraphicsImpl::makeFillPaint(double transparency, bool bSrcOver) const
 {
     assert(moFillColor.has_value());
-    SkPaint paint = makePaintInternal(bSrcATop);
+    SkPaint paint = makePaintInternal(bSrcOver);
     paint.setColor(transparency == 0
                        ? SkiaHelper::toSkColor(*moFillColor)
                        : SkiaHelper::toSkColorWithTransparency(*moFillColor, transparency));
@@ -420,7 +420,7 @@ inline SkPaint SkiaSalGraphicsImpl::makeGradientPaint() const { return makePaint
 inline SkPaint SkiaSalGraphicsImpl::makeTextPaint(std::optional<Color> color) const
 {
     assert(color.has_value());
-    SkPaint paint = makePaintInternal(/*bSrcATop*/ true);
+    SkPaint paint = makePaintInternal(/*bSrcOver*/ true);
     paint.setColor(SkiaHelper::toSkColor(*color));
     return paint;
 }
